--- a/index.html
+++ b/index.html
@@ -1,123 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <h1 class="headline">Lorem Ipsum</h1>
-      <div class="list-wrapper">
-        <div class="line">
-          <div class="red-line"></div>
-        </div>
-        <ul class="list">
-          <li class="element">
-            <h2 class="date">1990</h2>
-            <div class="button">🏘</div>
-            <div class="content">
-              <img src="./img/cat1.jpg" alt="" />
-              <h3>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be sure there isn't anything embarrassing
-                hidden in the middle of text.
-              </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </li>
-          <li class="element">
-            <h2 class="date">1993</h2>
-            <div class="button">🏘</div>
-            <div class="content">
-              <h3>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable.
-              </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </li>
-          <li class="element">
-            <h2 class="date">2000</h2>
-            <div class="button">🏘</div>
-            <div class="content">
-              <img width="400" src="./img/cat2.jpg" alt="" />
-              <h3>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be sure there isn't anything embarrassing
-                hidden in the middle of text.
-              </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </li>
-          <li class="element">
-            <h2 class="date">2012</h2>
-            <div class="button">🏘</div>
-            <div class="content">
-              <h3>
-                If you are going to use a passage of Lorem Ipsum, you need to be
-                sure there isn't anything embarrassing hidden in the middle of
-                text.
-              </h3>
-            </div>
-          </li>
-          <li class="element">
-            <h2 class="date">2018</h2>
-            <div class="button">🏘</div>
-            <div class="content">
-              <img src="./img/cat3.jpg" alt="" />
-              <h3>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be sure there isn't anything embarrassing
-                hidden in the middle of text.
-              </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </li>
-          <li class="element">
-            <h2 class="date">2023</h2>
-            <div class="button">🏘</div>
-            <div class="content">
-              <img src="./img/cat4.jpg" alt="" />
-              <h3>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be sure there isn't anything embarrassing
-                hidden in the middle of text.
-              </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Document</title><script defer="defer" src="main.js"></script></head><body><div class="wrapper"><h1 class="headline">Lorem Ipsum</h1><div class="list-wrapper"><div class="line"><div class="red-line"></div></div><ul class="list"><li class="element"><h2 class="date">1990</h2><div class="button">🏘</div><div class="content"><img src="images/cat1.jpg" alt=""/><h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div></li><li class="element"><h2 class="date">1993</h2><div class="button">🏘</div><div class="content"><h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div></li><li class="element"><h2 class="date">2000</h2><div class="button">🏘</div><div class="content"><img width="400" src="images/cat2.jpg" alt=""/><h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div></li><li class="element"><h2 class="date">2012</h2><div class="button">🏘</div><div class="content"><h3>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</h3></div></li><li class="element"><h2 class="date">2018</h2><div class="button">🏘</div><div class="content"><img src="images/cat3.jpg" alt=""/><h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div></li><li class="element"><h2 class="date">2023</h2><div class="button">🏘</div><div class="content"><img src="images/cat4.jpg" alt=""/><h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div></li></ul></div></div></body></html>
